# toy

./: .gitattributes  .gitignore  .toyfmt  AGENTS.md  CMakeLists.txt  LICENSE  README.md  builtins.json  install.sh  nob.c
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  deque.toy  dispatch.toy  list.toy  map.toy  pqueue.toy  run.ps1  runtime-internals.toy  sequence-algorithms.toy  set.toy  string.toy  vector.toy
benchmarks/results/: 2026-06-23-sort-unique.md  2026-06-23-string-storage.md  2026-07-12-filter-vector-reserve.md  2026-07-12-word-lookup-cache.md  2026-07-13-dispatch-low-hanging.md  2026-07-21-binrec-inline-snapshot.md  2026-07-21-compact-recursion-controllers.md  2026-07-21-control-inline-snapshots.md  2026-07-21-frame-scratch-arena.md  2026-07-21-list-node-slabs.md  2026-07-21-quickened-instructions.md  2026-07-21-retained-word-resolution-cache.md  2026-07-21-tagged-integers.md  TEMPLATE.md
bindings/ffi/: toy_ffi.c
bindings/raylib/: toy_raylib.c  toy_raylib.h
cmake/: RunDebugProtocol.cmake  RunToyCase.cmake  ToyBinding.cmake
core/ffi/: README.md  toy_ffi.c
docs/: ROADMAP.md  bindgen.md  build.md  c-libraries.md  callables-refactor.md  combinators.md  dap.md  data-model.md  editor.md  embedding.md  ffi.md  formatter.md  installation.md  language-roadmap.md  lsp.md  packages.md  repl.md  runtime-internals.md  testing.md  tree-sitter.md  vscode.md
docs/development/: build.md  runtime-internals.md  testing.md
examples/: README.md  csv.toy  factorial.toy  fibonacci.toy  mergesort.toy
examples/c/: embed.c  embed_values.c  raylib_host.c
examples/dynamic_prog/: bottom-up.toy  fast-doubling.toy  top-down.toy
examples/embedding/: README.md  callbacks.c  embed.c
examples/ffi/: README.md  main.toy
examples/interop/: README.md
examples/programs/: factorial.toy  mergesort.toy
examples/quines/: quine.toy
examples/toy/: README.md  ffi_strlen.toy  generated_clib.toy  qsort.toy  raylib_shapes.toy  raylib_texture.toy
fth/: benchmark.fth  benchmark_native.fth  test_additions.fth  test_adv_loops.fth  test_app2.fth  test_blocks.fth  test_combinators.fth  test_factorial.fth  test_geth_seth.fth  test_input.fth  test_invalid_sleep.fth  test_key.fth  test_list_primitives.fth  test_load.fth  test_loops.fth  test_master.fth  test_primitives.fth  test_prof.fth  test_qsort.fth  test_rand_sleep.fth  test_std_flag.fth  test_std_list.fth
fth/std/: core.fth  list.fth  std.fth
include/: tf_alloc.h  tf_console.h  tf_debug_control.h  tf_debug_protocol.h  tf_exec.h  tf_lexer.h  tf_lib.h  tf_native_loader.h  tf_obj.h  tf_repl.h  tf_runtime.h  toy.h  toy_module.h  toy_package.h
modules/: README.md
modules/ffi/: README.md  toy_ffi.c
src/: main.c  tf_alloc.c  tf_alloc.h  tf_builtins.h  tf_builtins.inc  tf_builtins_control.c  tf_builtins_core.c  tf_builtins_data.c  tf_builtins_io.c  tf_builtins_meta.c  tf_builtins_sys.c  tf_console.c  tf_context.c  tf_debug_control.c  tf_debug_control.h  tf_debug_inspect.c  tf_debug_protocol.c  tf_dictionary.c  tf_docs.c  tf_docs.h  tf_exec.c  tf_exec.h  tf_lexer.c  tf_lib.c  tf_lib_control.c  tf_lib_core.c  tf_lib_data.c  tf_lib_io.c  tf_lib_meta.c  tf_lib_sys.c  tf_modules.c  tf_native_loader.c  tf_native_loader.h  tf_obj.c  tf_obj.h  tf_package_loader.c  tf_packages.c  tf_parser.c  tf_parser.h  tf_repl.c  (+6 more)
src/cli/: main.c  tf_debug_protocol.c  tf_debug_protocol.h  tf_repl.c
tests/bindings/: test_bindgen.json
tests/c/: test_bindgen_fixture.c  test_bindgen_fixture.h  test_bindgen_module.c  test_bindgen_package.c  test_debug_control.c  test_debug_inspection.c  test_embed_api.c  test_ffi_fixture.c  test_ffi_module.c  test_ffi_package.c  test_linenoise.c  test_native_bad_plugin.c  test_native_loader.c  test_native_plugin.c  test_raylib_fixture.c  test_raylib_module.c
tests/tools/: test_generate_binding.js
tests/toy/: fail_module_cycle.stderr  fail_module_cycle.toy  fail_module_qualified_def.stderr  fail_module_qualified_def.toy  fail_namespace_old_separator.stderr  fail_namespace_old_separator.toy  fail_parse_capture_duplicate.toy  fail_parse_capture_name.stderr  fail_parse_capture_name.toy  fail_parse_capture_qualified.stderr  fail_parse_capture_qualified.toy  fail_parse_capture_quoted_name.toy  fail_program_explicit_error.stderr  fail_program_explicit_error.toy  fail_qualified_def.stderr  fail_qualified_def.toy  fail_runtime_context.stderr  fail_runtime_context.toy  fail_runtime_divide_by_zero.stderr  manual_ansi.toy  manual_tdb.toy  output_repr.stdout  output_repr.toy  test_advanced_combinators.toy  test_callables.toy  test_captures.toy  test_collection_construction.toy  test_collection_words.toy  test_combinator_examples.toy  test_continuations.toy  test_control.toy  test_debug_protocol.toy  test_definitions.toy  test_deque_pqueue.toy  test_error_handling.toy  test_file_io.toy  test_indexed_collections.toy  test_introspection.toy  test_iteration.toy  test_lexer.toy  (+16 more)
tools/: generate-binding.js  generate-builtins.js  go.mod  install-nvim.ps1  install-nvim.sh  install.ps1  sync-builtin-docs.js  sync-tree-sitter-parser.js
tools/nob/: benchmarks.h  build.h  tests.h
tools/toy-lsp/: go.mod
tools/tree-sitter-toy/: builtin-words.js  grammar.js  package-lock.json  package.json  tree-sitter.json
tools/vscode-toy/: extension.js  (+3 more)
toy/: benchmark.toy  benchmark_native.toy  test.toy  test_additions.toy  test_adv_loops.toy  test_app2.toy  test_app_csv.toy  test_at_set_at.toy  test_callables.toy  test_collections_adv.toy  test_combinator_examples.toy  test_combinators.toy  test_combinators_adv.toy  test_continuations.toy  test_cursor.toy  test_def.toy  test_deque_pqueue.toy  test_env.toy  test_error_adv.toy  test_factorial.toy  test_file.toy  test_fold_append_range.toy  test_fold_push_back_range.toy  test_geth_seth.toy  test_input.toy  test_introspection.toy  test_invalid_times.toy  test_key.toy  test_lexer_solid.toy  test_list_primitives.toy  test_lists.toy  test_load.toy  test_loops.toy  test_map.toy  test_maps_sets.toy  test_master.toy  test_math_adv.toy  test_mergesort.toy  test_neg.toy  test_primitives.toy  (+15 more)
(+159 files in other folders)
